--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.4.1",
     "eslint": "^8.4.1",
